# wfc3_dash

./: README.md  README.rst  old_read_me  setup.cfg
wfc3_dash/: .#reduce_dash.py  diagnose.py  prepare.py  reduce_dash.py  utils.py
wfc3_dash/notebooks/: Dash_reduction_flow_example.ipynb  Step_1-Creating_Science_Data_from_IMAs.ipynb  Step_1-Creating_Science_Data_from_single_exposure_IMAs.ipynb  Step_2-Align_multiple_exposures_to_outside_catalog.ipynb  Step_3-Create_Mosaic_from_all_exposure_IMA_diff_files.ipynb  cleandir.sh
wfc3_dash/notebooks/.ipynb_checkpoints/: Dash_reduction_flow_example-checkpoint.ipynb
wfc3_dash/tests/: test_diagnose.py  test_reduce_dash.py  test_utils.py
