[metadata]
package_name = wfc3_dash
description = HST/WFC3 DASH TOOLS
long_description = Tools for data reduction of the HST/WFC3 DASH mode observations
author = STScI
author_email = imomcheva@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/wfc3_dash
description-file = README.rst
url = http://www.stsci.edu/
homepage = http:://www.stsci.edu/

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build relic

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
